prover-ray/zkcdriver/testdata/synced/invalid/while_01.zkc
//error:4:9-10:invalid condition
fn f(x:u8) -> (r:u8) {
  r = 0
  while x = 0 {
    r = 1
  }
  return
}
